RESOLVED FIXED229267
WebGL via Metal experimental feature does not correctly toggle metal backend
https://bugs.webkit.org/show_bug.cgi?id=229267
Summary WebGL via Metal experimental feature does not correctly toggle metal backend
Kyle Piddington
Reported 2021-08-18 17:56:59 PDT
WebGL via Metal experimental feature does not correctly toggle metal backend
Attachments
Patch (1.76 KB, patch)
2021-08-18 17:59 PDT, Kyle Piddington
no flags
Patch (12.57 KB, patch)
2021-08-18 20:40 PDT, Kyle Piddington
dino: review+
ews-feeder: commit-queue-
EWS test (9.75 KB, patch)
2021-08-19 09:25 PDT, Dean Jackson
ews-feeder: commit-queue-
Kyle Piddington
Comment 1 2021-08-18 17:59:08 PDT
Dean Jackson
Comment 2 2021-08-18 18:13:48 PDT
We should be able to write a test for this. It would require adding an Internals API similar to r240578. We can toggle the setting on a per-test basis.
Dean Jackson
Comment 3 2021-08-18 18:13:56 PDT
We should be able to write a test for this. It would require adding an Internals API similar to r240578. We can toggle the setting on a per-test basis.
Dean Jackson
Comment 4 2021-08-18 18:17:26 PDT
<!-- webkit-test-runner [ WebGLUsingMetal=false ] → should turn it off for a specific test
Dean Jackson
Comment 5 2021-08-18 18:27:14 PDT
Kyle Piddington
Comment 6 2021-08-18 20:40:11 PDT
Dean Jackson
Comment 7 2021-08-19 09:15:06 PDT
Comment on attachment 435835 [details] Patch r=me but we'll remove the Metal.framework from Xcode when landing.
Dean Jackson
Comment 8 2021-08-19 09:25:58 PDT
Created attachment 435872 [details] EWS test
Dean Jackson
Comment 9 2021-08-19 09:28:25 PDT
Radar WebKit Bug Importer
Comment 10 2021-08-19 09:29:16 PDT
Note You need to log in before you can comment on or make changes to this bug.